# douyin_RAG

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: auth.py  chat.py  douyin.py  favorites.py  ingest.py  knowledge.py
backend/app/core/: config.py  logging.py  startup_checks.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: __init__.py  dto.py
backend/app/services/: asr_service.py  chroma_service.py  douyin_collector.py  favorites_service.py  ingest_service.py  knowledge_service.py  llm_service.py  media_service.py  rag_service.py  text_processing.py  worker.py
backend/scripts/: rebuild_storage.py
backend/sql/: create_database.sql
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  main.tsx  styles.css
frontend/src/pages/: ChatPage.tsx  FavoritesPage.tsx  LoginPage.tsx
