[project]
name = "douyin-rag-backend"
version = "0.1.0"
description = "Backend for Douyin Favorites RAG MVP"
readme = "../README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "sqlalchemy==2.0.43",
  "pydantic-settings==2.10.1",
  "python-dotenv==1.1.1",
  "openai==1.106.1",
  "chromadb==1.0.20",
  "playwright==1.55.0",
  "yt-dlp==2025.9.26",
  "faster-whisper==1.2.0",
  "python-multipart==0.0.20",
  "tenacity==9.1.2",
  "fastembed==0.7.3",
]

[tool.uv]
package = false
